# epi-sim

./: .gitignore  .travis.yml  ARCHITECTURE.md  ChangeLog.md  LICENSE  README.md  epi-sim.cabal  package.yaml  requirements.txt  sim-params.json  simulation.py  stack.yaml
app/: Main.hs
examples/bdscod/: Main.hs
examples/inhomogeneous-birth-death/: Main.hs
examples/inhomogeneous-birth-death-sampling/: Main.hs
src/: Epidemic.hs
src/Epidemic/: BDSCOD.hs  BirthDeath.hs  BirthDeathSampling.hs  BirthDeathSamplingCatastropheOccurrence.hs  BirthDeathSamplingOccurrence.hs  InhomogeneousBD.hs  InhomogeneousBDS.hs  Simulation.hs  Types.hs  Utility.hs
src/Epidemic/Data/: Events.hs  Newick.hs  Observations.hs  Parameter.hs  Population.hs  Simulation.hs  Time.hs
src/Epidemic/Model/: BDSCOD.hs  BirthDeathSampling.hs  InhomogeneousBDS.hs  InhomogeneousBDSCOD.hs  LogisticBDSD.hs
src/Epidemic/Types/: Events.hs  Newick.hs  Observations.hs  Parameter.hs  Population.hs  Simulation.hs  Time.hs
test/: Spec.hs
vis/: birth-death-lines.R  birthDeathSamplingVisualisation.R  full-ltt.R  infection-tree.vg.json  ltt.R  ott.R
