cabal-version:  3.0
name:           epi-sim
version:        0.2.1.0
synopsis:       A tool for simulating epidemics as birth-death processes.
description:    Please see the README on GitHub at <https://bitbucket.org/azarebski/epi-sim/src/master/README.md>
homepage:       https://github.com/azarebski/epi-sim#readme
bug-reports:    https://github.com/azarebski/epi-sim/issues
author:         Alexander Zarebski
maintainer:     aezarebski@gmail.com
copyright:      2020 Alexander Zarebski
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    vis/birth-death-lines.R
    vis/birthDeathSamplingVisualisation.R
    vis/full-ltt.R
    vis/infection-tree.vg.json
    vis/ltt.R
    vis/ott.R

source-repository head
  type: git
  location: https://github.com/azarebski/epi-sim

library
  exposed-modules:
      Epidemic
      Epidemic.BDSCOD
      Epidemic.BirthDeath
      Epidemic.BirthDeathSampling
      Epidemic.BirthDeathSamplingCatastropheOccurrence
      Epidemic.BirthDeathSamplingOccurrence
      Epidemic.InhomogeneousBD
      Epidemic.InhomogeneousBDS
      Epidemic.Types.Events
      Epidemic.Types.Observations
      Epidemic.Types.Parameter
      Epidemic.Types.Population
      Epidemic.Utility
  other-modules:
      Paths_epi_sim
  hs-source-dirs:
      src
  build-depends:
                aeson                       >= 1.4.0 && < 1.5,
                base                        >= 4.8.2 && < 4.14,
                bytestring                  >= 0.10.6 && < 0.11,
                primitive                   >= 0.6.1 && < 0.8,
                vector                      >= 0.11.0 && < 0.13,
                cassava                     >= 0.5.2 && < 0.6,
                hspec                       >= 2.7.4 && < 2.8,
                mwc-random                  >= 0.14.0 && < 0.15,
                statistics                  >= 0.15.0 && < 0.16,
                trifecta                    >= 2.1 && < 2.2,
  default-language: Haskell2010
  ghc-options: -j2 -Wincomplete-patterns -Werror

test-suite epi-sim-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_epi_sim
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                aeson                       >= 1.4.0 && < 1.5,
                base                        >= 4.8.2 && < 4.14,
                bytestring                  >= 0.10.6 && < 0.11,
                epi-sim                     >= 0.2.1,
                primitive                   >= 0.6.1 && < 0.8,
                vector                      >= 0.11.0 && < 0.13,
                cassava                     >= 0.5.2 && < 0.6,
                hspec                       >= 2.7.4 && < 2.8,
                mwc-random                  >= 0.14.0 && < 0.15,
                statistics                  >= 0.15.0 && < 0.16,
                trifecta                    >= 2.1 && < 2.2,
  default-language: Haskell2010
